fixed whitespace issues

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,6 +52,7 @@ FONT SIZE SYSTEM (px)
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+  overflow-x: hidden;
 
   @include respond(tab-land-max) {
     font-size: 56.25%;
@@ -64,9 +65,11 @@ html {
 
 body {
   font-family: "Epilogue", sans-serif;
+  width: 100%;
   font-weight: 500;
   line-height: 1;
   background-color: var(--color-main);
+  overflow-x: hidden;
 }
 
 .container {
@@ -88,13 +91,13 @@ body {
   @include respond(phone) {
     grid-template-rows: 8rem 1fr;
   }
-  overflow-x: hidden;
 }
 
 /////////////////////////////////////////////////
 // HEADER
 .header {
   grid-column: full-start / full-end;
+  position: relative;
 
   display: flex;
   align-items: center;
@@ -103,7 +106,6 @@ body {
 
   @include respond(tab-pot) {
     justify-content: space-between;
-    overflow-x: hidden;
   }
 }
 
@@ -174,9 +176,6 @@ body {
 
     &--up {
       display: none;
-    }
-
-    &--down {
     }
   }
 
@@ -296,8 +295,6 @@ body {
   color: var(--color-grey);
   transition: all 0.2s;
   cursor: pointer;
-  &--login {
-  }
 
   &--register {
     border: 2px solid currentColor;
@@ -373,7 +370,7 @@ body {
   }
 
   @include respond(phone) {
-    gap: 4.8rem;
+    gap: 5.6rem;
   }
 
   &__text-box {
@@ -408,7 +405,7 @@ body {
 
     @include respond(phone) {
       width: 80%;
-      margin-bottom: 2rem;
+      margin-bottom: 3.2rem;
     }
   }
 
